# salvo-captcha

./: Cargo.toml  Justfile  LICENSE  README.md
.forgejo/workflows/: ci.yml
.github/workflows/: auto_close_pr.yml  ci.yml
examples/: simple_login.rs
src/: captcha_gen.rs  finder.rs  lib.rs  storage.rs
src/captcha_gen/: mod.rs  simple_generator.rs
src/finder/: form_finder.rs  header_finder.rs  mod.rs  query_finder.rs
src/storage/: cacache_storage.rs  memory_storage.rs  mod.rs
