[package]
name = "salvo-captcha"
version = "0.1.0"
rust-version = "1.75.0"
edition = "2021"
authors = ["Awiteb <a@4rs.nl>"]
description = "A captcha middleware for Salvo framework."
license = "MIT"
repository = "https://github.com/TheAwiteb/salvo-captcha"
documentation = "https://docs.rs/salvo-captcha"
readme = "README.md"
keywords = ["salvo", "captcha", "middleware"]
categories = ["web-programming", "network-programming"]


[dependencies]
cacache = { version = "13", default-features = false, features = ["tokio-runtime", "mmap"], optional = true }
captcha = { version = "0.0.9", default-features = false }
log = "0.4"
salvo_core = { version = ">= 0.65, < 0.69", default-features = false }
uuid = { version = "1.7", features = ["v4"], optional = true }

[features]
cacache-storage = ["dep:cacache", "dep:uuid"]

[dev-dependencies]
tempfile = "3.9"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
base64 = "0.21"
salvo = { version = ">= 0.65, < 0.69", default-features = false, features = ["server", "http1","http2", "affix"] }
