[package]
name = "salvo-captcha"
version = "0.3.1"
rust-version = "1.75.0"
edition = "2021"
authors = ["Awiteb <a@4rs.nl>"]
description = "A captcha middleware for Salvo framework."
license = "MIT"
repository = "https://git.4rs.nl/awiteb/salvo-captcha"
documentation = "https://docs.rs/salvo-captcha"
readme = "README.md"
keywords = ["salvo", "captcha", "middleware"]
categories = ["web-programming", "network-programming"]


[dependencies]
salvo_core = { version = ">= 0.65, < 0.69", default-features = false }
log = "0.4"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", default-features = false }
cacache = { version = "13", default-features = false, features = ["tokio-runtime", "mmap"], optional = true }
captcha = { version = "0.0.9", default-features = false, optional = true}
either = { version = "1.13.0", default-features = false }

[features]
cacache-storage = ["dep:cacache"]
simple-generator = ["dep:captcha"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
tempfile = "3.9"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
base64 = "0.21"
salvo = { version = ">= 0.65, < 0.69", default-features = false, features = ["server", "http1","http2", "affix"] }
rstest = "0.22.0"

[[example]]
name = "simple_login"
required-features = ["simple-generator"]
